# Sincroni

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  schema.sql  table.md  table.sql
.github/workflows/: codeql-analysis.yml
cogs/: __init__.py  global.py  jsk.py  link.py  listener.py
utils/: extra.py  views.py
utils/database/: connection.py  models.py  types.py
