[tool.poetry]
name = "sincroni"
version = "0.1.0"
description = ""
authors = ["JDBot <jdjgbot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.dev0"
asyncpg = ">=0.29.0"
better-profanity = ">=0.7.0"
discord-py = {git = "https://github.com/Rapptz/discord.py"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
pillow = ">=10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
